web/src/components/pages/about/playbook.css
.cv-tab-group {
    display: grid;
    grid-template-columns: 30% 65%;
    grid-template-rows: auto;
    grid-column-gap: 5%;
    padding-top: 5rem;

    @media (--sm-down) {
        display: block;

        .cv-tab-content {
            margin: 0;
        }
    }

    .cv-tab-title {
        grid-column-start: 1;
        font-size: 1.5rem;
        font-weight: bold;
        font-family: var(--strong-font-family);
        padding: 0.75rem 0 1.25rem;
        display: block;
        position: relative;
        margin: 0 1rem;

        @media (--md-down) {
            border-top: 1px solid var(--warm-grey);
        }

        a {
            display: block;
            color: var(--inactive-grey);
        }

        .highlight {
            max-width: 100%;
            opacity: 0;
            margin-bottom: 0.5rem;
        }

        &.active {
            &::before {
                content: '';
                position: absolute;
                top: 0;
                left: 0;
                background: linear-gradient(90deg, #f89096 0%, #b1b5e5 100%);
                height: 4px;
                width: 100%;
                display: block;
            }

            a {
                color: var(--black);
            }

            .highlight {
                opacity: 1;
            }
        }
    }

    .cv-tab-content {
        display: none;
        grid-row-start: 1;
        grid-row-end: 100;
        grid-column-start: 2;

        h2 {
            font-family: var(--base-font-family);

            @media (--sm-down) {
                display: none;
            }
        }

        p {
            margin: 1rem 0 0;
        }

        a {
            color: var(--blue);

            &:hover {
                text-decoration: underline;
            }
        }

        .tab-subtitle {
            margin-bottom: -1rem;
        }

        .button {
            margin-top: 1rem;
            text-transform: uppercase;
            font-weight: 600;
            display: inline-block;
            line-height: 1.5rem;
            padding: 0.75rem 1rem 0.75rem 2rem;
            border-color: var(--blue);
            background: var(--blue);
            color: var(--white);

            svg {
                float: right;
                margin-left: 2rem;

                path {
                    fill: var(--white);
                }
            }

            &:hover {
                color: var(--blue);
                background: var(--white);

                svg {
                    path {
                        fill: var(--blue);
                    }
                }
            }
        }

        .about-playbook-content {
            padding: 2rem;
            background: var(--lighter-grey);
            box-shadow: 0 4px 8px var(--darker-grey);

            @media (--sm-down) {
                box-shadow: 0;
                padding: 1rem 2rem 2rem;
            }
        }

        .record-quality-content {
            display: grid;
            grid-template-columns: 49% 48%;
            grid-template-rows: auto;
            grid-column-gap: 3%;

            img {
                justify-self: end;
            }
        }

        &.active {
            display: block;
        }
    }
}

